fix(css-components): Card word-wrap. Closes #2244.

--- a/css-components/src/components/card.css
+++ b/css-components/src/components/card.css
@@ -27,6 +27,7 @@
   margin: 8px;
   padding: 16px;
   text-align: left;
+  word-wrap: break-word;
 }
 
 .card__content {
